<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="Patient DashBoard"
        app:titleTextColor="#FFFFFF"></android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_book_appointment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_book_appointment"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/d_book_appointment" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_book_appointment"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="@string/book_appointment"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_appointments"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/img_appointments"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/d_appointments" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_appointments"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="@string/appointments"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_health_summary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_health_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/d_health_summary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_health_summary"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="@string/health_summary"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_chat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/img_chat"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/d_chat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_chat"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="@string/chat"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rl_billing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_billing"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/expense256"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_billing"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="@string/d_billing"
                            android:textColor="@color/black" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rl_wallet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_wallet"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/d_billing" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_wallet"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="Wallet"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/rl_logout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_logout"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_10"
                            android:src="@drawable/ic_logout_icon"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/iv_logout"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/padding_5"
                            android:text="Logout"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>